@@ -42,7 +42,7 @@ public class BeanDataIterator<K> extends AbstractDataIterator implements DataIte
         _class = cls;
         _cols.add(new BaseColumnInfo(ROWNUMBER_COLUMNNAME, JdbcType.INTEGER));
         _readMethods.add(null);
-        K bean = rows.isEmpty() ? null : rows.get(0);
+        K bean = rows.isEmpty() ? null : rows.getFirst();
 
         for (PropertyDescriptor origDescriptor : PropertyUtils.getPropertyDescriptors(cls))
         {
