@@ -15,7 +15,6 @@
  */
 package org.labkey.query.olap;
 
-import org.apache.commons.lang3.Strings;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.jetbrains.annotations.NotNull;
@@ -229,7 +228,7 @@ public class BitSetQueryImpl
                 assert ((CachedCube._NamedList)h.getLevels()).isReadOnly();
                 qq.countDistinctLevel = h.getLevels().get(h.getName());
                 if (null == qq.countDistinctLevel)
-                    qq.countDistinctLevel = h.getLevels().get(h.getLevels().size() - 1);
+                    qq.countDistinctLevel = h.getLevels().getLast();
             }
         }
 
@@ -508,7 +507,7 @@ public class BitSetQueryImpl
         {
             if (results.size() == 1)
             {
-                results.get(0).toMdxSet(sb);
+                results.getFirst().toMdxSet(sb);
                 return;
             }
             sb.append(" UNION(");
@@ -562,7 +561,7 @@ public class BitSetQueryImpl
         {
             if (results.size() == 1)
             {
-                results.get(0).toMdxSet(sb);
+                results.getFirst().toMdxSet(sb);
             }
             else if (results.size() == 2)
             {
@@ -582,7 +581,7 @@ public class BitSetQueryImpl
         public String toString()
         {
             if (results.size() == 1)
-                return results.get(0).toString();
+                return results.getFirst().toString();
 
             StringBuilder sb = new StringBuilder();
             String x = "";
@@ -786,7 +785,7 @@ public class BitSetQueryImpl
     Result processExpr(QubeQuery.QubeExpr expr) throws SQLException
     {
         while (null != expr && null != expr.arguments && expr.arguments.size() == 1 && expr.op != QubeQuery.OP.MEMBERS)
-            expr = expr.arguments.get(0);
+            expr = expr.arguments.getFirst();
 
         if (null == expr)
             throw new IllegalArgumentException("Missing/malformed expression");
@@ -805,31 +804,14 @@ public class BitSetQueryImpl
             results.add(processExpr(in));
         }
 
-        switch (expr.op)
+        return switch (expr.op)
         {
-        case CROSSJOIN:
-        case XINTERSECT:
-        {
-            return crossjoin(expr.op, results);
-        }
-        case INTERSECT:
-        {
-            return intersect(expr.op, results);
-        }
-        case UNION:
-        {
-            return union(expr.op, results);
-        }
-        case EXCEPT:
-        {
-            return except(expr.op, results);
-        }
-        default:
-        case MEMBERS:
-        {
-            throw new IllegalStateException();
-        }
-        }
+            case CROSSJOIN, XINTERSECT -> crossjoin(expr.op, results);
+            case INTERSECT -> intersect(expr.op, results);
+            case UNION -> union(expr.op, results);
+            case EXCEPT -> except(expr.op, results);
+            default -> throw new IllegalStateException();
+        };
     }
 
 
@@ -851,10 +833,10 @@ public class BitSetQueryImpl
 
     Member getAllNullMember(Hierarchy h, int depth) throws OlapException
     {
-        if (1 != h.getRootMembers().size() || !h.getRootMembers().get(0).isAll())
+        if (1 != h.getRootMembers().size() || !h.getRootMembers().getFirst().isAll())
             return null;
 
-        Member ret = h.getRootMembers().get(0);
+        Member ret = h.getRootMembers().getFirst();
         while (ret.getLevel().getDepth() < depth)
         {
             ret = ret.getChildMembers().get("#null");
@@ -1307,7 +1289,7 @@ public class BitSetQueryImpl
         if (results.isEmpty())
             return new EmptyResult();
         if (results.size() == 1)
-            return results.get(0);
+            return results.getFirst();
 
         // if all members are part of the same hierarchy just return a simple MemberSetResult
         // if there is more than one hierarchy involved, return a UnionResult
@@ -1994,7 +1976,7 @@ public class BitSetQueryImpl
                 }
                 // add in the all member
                 if (!union.isEmpty())
-                    union.add(outer.hierarchy.getLevels().get(0).getMembers().get(0));
+                    union.add(outer.hierarchy.getLevels().getFirst().getMembers().getFirst());
 
                 return union;
             }
@@ -2159,7 +2141,7 @@ public class BitSetQueryImpl
                 return set;
 
             int depth = level.getDepth();
-            CachedCube._Member all = (CachedCube._Member)level.getHierarchy().getLevels().get(0).getMembers().get(0);
+            CachedCube._Member all = (CachedCube._Member)level.getHierarchy().getLevels().getFirst().getMembers().getFirst();
 
             MemberSet ret = new MemberSet();
             try (ResultSet rs = execute(serviceUser, sql))
@@ -2209,7 +2191,7 @@ public class BitSetQueryImpl
 
                             if (null == child)
                             {
-                                _log.info("Child not found: parent=" + m.getUniqueName() + " key=" + String.valueOf(key));
+                                _log.info("Child not found: parent={} key={}", m.getUniqueName(), String.valueOf(key));
                                 continue resultLoop;
                             }
                             m = child;
@@ -2408,19 +2390,19 @@ public class BitSetQueryImpl
         @Override
         public Level getLevel()
         {
-            return cube.getMeasures().get(0).getLevel();
+            return cube.getMeasures().getFirst().getLevel();
         }
 
         @Override
         public Hierarchy getHierarchy()
         {
-            return cube.getMeasures().get(0).getHierarchy();
+            return cube.getMeasures().getFirst().getHierarchy();
         }
 
         @Override
         public Dimension getDimension()
         {
-            return cube.getMeasures().get(0).getDimension();
+            return cube.getMeasures().getFirst().getDimension();
         }
 
         @Override
